--- a/alallas_penguins_lab6.Rmd
+++ b/alallas_penguins_lab6.Rmd
@@ -51,5 +51,43 @@ penguins2 <- penguins %>%
 - Exploratory graphs
 - Summary statistics
 - Levene's tests for equal variances
-- One way ANOVA
--
+- one way ANOVA
+- post-hoc testing
+
+```{r}
+
+hists <- ggplot(penguins2, aes(x = flipper_length)) +
+  geom_histogram(aes(fill = common_name)) +
+  facet_wrap(~common_name)
+
+hists
+
+qqs <- ggplot(penguins2, aes(sample = flipper_length)) +
+  geom_qq() +
+  facet_wrap(~common_name)
+
+qqs
+
+# Levene's test for equal variances (>2 groups... if you have two groups, use the F-test for equal variances)
+
+# We'll use the function leveneTest from the 'car' package
+
+# H0: Variances are equal
+# HA: Variances are unequal
+
+penguin_levene <- leveneTest(flipper_length ~ common_name, data = penguins2)
+
+penguin_levene
+
+# We retain the null hypothesis of equal variances (p = 0.06)
+
+variances <- penguins2 %>% 
+  group_by(common_name) %>% 
+  summarize(
+    variance = var(flipper_length)
+  )
+
+variances
+
+```
+
