Updated with one-way ANOVA + post-hoc Tukey's

--- a/alallas_penguins_lab6.Rmd
+++ b/alallas_penguins_lab6.Rmd
@@ -91,3 +91,31 @@ variances
 
 ```
 
+#3. One-way ANOVA
+
+Single factor: common_name (species)
+Number of levels in the factor: 3 (Chinstrap, Gentoo, Adelie)
+Random Variable: flipper_length (mm)
+
+Is there a significant difference in mean flipper length (mm) for female Chinstrap, Gentoo, and Adelie penguins?
+
+```{r}
+
+# H0: Mean flipper lengths across all species are equal
+# HA: At least two means differ significantly
+
+penguin_aov <- aov(flipper_length ~ common_name, data = penguins2)
+
+summary(penguin_aov)
+
+# At least two samples were taken from populations with different means. Which ones are different? All three different from each other? Or something else?
+
+# Post-hoc testing using Tukey's HSD
+
+penguin_ph <- TukeyHSD(penguin_aov)
+
+penguin_ph
+
+```
+
+Mean flipper lengths for Adelie, Gentoo, and Chinstrap penguins are all significantly different (F(df) = statistic, p < 0.001, $\alpha$ = 0.05 with post-hoc Tukey's HSD, $\alpha$ = 0.05).
